GC final changes?

--- a/document/source/assertion.bib
+++ b/document/source/assertion.bib
@@ -551,3 +551,13 @@ year={1968}
   year={1981},
   publisher={Elsevier}
 }
+
+@article{farah2016drivers,
+  title={When do drivers abort an overtaking maneuver on two-lane rural roads?},
+  author={Farah, Haneen},
+  journal={Transportation research record},
+  volume={2602},
+  number={1},
+  pages={16--25},
+  year={2016},
+}
