slight edits in conclusion

--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -1234,15 +1234,14 @@ The existence of 'cognitive rules' in the driving code of conduct suggests that 
 %\todo[inline]{Revise: cover contributions, ...}
 
 In this paper we have presented a methodology to systematically derive formal logical expressions, encoded as assertions, from the UKHC. We have introduced a process for monitoring assertions that can be used for simulation-based assertion checking and runtime monitoring during operation.
-We have also developed a taxonomic classification of assertion types that are applicable to checking of rules that can be evaluated by objective measurement. This scheme reveals key aspects of assertion design, such as assertion reference points and trigger expressions, which should be incorporated in any program code to execute the checks. This helps to ensure the verification that assertions are expressed correctly. We have developed SQL-based programming schemes for encoding the assertions, and demonstrated their use on a PostgreSQL/PostGIS database, which receives simulation trace data from a Carla simulator running an AV simulation scenario. We have also applied assertion checks to sample video data to emulate the use of assertion checking as a runtime monitoring technique.
+We have also developed a taxonomic classification of assertion types that are applicable to checking of rules that can be evaluated by objective measurement. This scheme reveals key aspects of assertion design, such as assertion reference points and trigger expressions. These should be incorporated in any program code to execute the checks to ensure that assertions are expressed correctly. We have developed SQL-based programming schemes for encoding the assertions, and demonstrated their use on a PostgreSQL/PostGIS database, which receives simulation trace data from a Carla simulator running an AV simulation scenario. We have also applied assertion checks to sample video data to emulate the use of assertion checking as a runtime monitoring technique.
 %\todo[inline]{complete with reference to abstract and first section - contributions}
 The results obtained from both the simulation and the runtime video analysis case studies show the general feasibility and utility of assertion-based safety validation, with the assertions being derived from regulatory documentation written in natural language and intended for human drivers rather than written specifically to be usable by computer. The results provide our first indication that human-oriented natural language rules for driving can be an effective %oracle 
 basis
 for %assessment of artificial systems.
 safety validation of autonomous vehicles.
 %The case studies were carried out at an early stage of development so we did not employ every element of the methodology that has emerged. Nevertheless, we believe that enough of the process has been demonstrated to show that the full methodology is viable.\todo[inline]{focus on what we did, not what we did not do - state that this illustrates, rather than ``we believe''.}
-We also present the idea of using UKHC-based assertion checking methodology as a method to infer autonomous vehicle performance and have demonstrated this with an overtaking scenario using simulation results. We have demonstrated that a common UKHC assertion %-based oracle 
-checking system
+We also present how the UKHC-based assertion checking methodology can be used as a method to infer autonomous vehicle performance and 
 is equally as usable in runtime monitoring as it is in simulation.
 % GC condensed this section:
 %\subsection{Future Work}\label{future_work}
